# cli-player

./: .gitignore  Cargo.toml  README.md  character-pallets.txt
src/: audio_manager.rs  character_pallet.rs  config.rs  frames.rs  image.rs  lib.rs  main.rs  video.rs  video_player.rs  wating_animation.rs
