[package]
name = "cli-player"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv  = "0.82.1"
colored = "2.0.0"
rustube = "0.6.0"
clap    = { version = "4.3.10", features = ["derive"] }
tokio   = { version = "1.21.2", features = ["full"] }
rayon   = "1.7.0"
rodio   = { version = "0.17.1", features = ["symphonia-all"] }